# iidm4cpp

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  build_java.sh
.github/workflows/: ci.yml  release.yml
cmake/: FindGraalVM.cmake  IidmBridgeConfig.cmake.in
examples/: CMakeLists.txt  IEEE14.xiidm  binary_iidm.py  extensions_test.xiidm
examples/embedded/: CMakeLists.txt  DynawoEmbedded.cpp  JavaLauncher.java
examples/standalone/: CMakeLists.txt  main.cpp
include/iidm/: ActivePowerControl.h  BackendProvider.h  Battery.h  Bus.h  BusbarSection.h  CoordinatedReactiveControl.h  CurrentLimits.h  DanglingLine.h  Enums.h  Extension.h  Generator.h  HvdcAngleDroopActivePowerControl.h  HvdcLine.h  HvdcOperatorActivePowerRange.h  IidmException.h  InternalConnection.h  LccConverterStation.h  Line.h  Load.h  MinMaxReactiveLimits.h  Network.h  NetworkFactory.h  ObjectHandle.h  PhaseTapChanger.h  PhaseTapChangerStep.h  PropertyCodes.h  RatioTapChanger.h  RatioTapChangerStep.h  ReactiveCapabilityCurve.h  ShuntCompensator.h  ShuntCompensatorNonLinearModel.h  SlackTerminal.h  StaticVarCompensator.h  Substation.h  Switch.h  TemporaryLimit.h  Terminal.h  ThreeWindingsTransformer.h  TwoWindingsTransformer.h  VoltageLevel.h  (+3 more)
java/: pom.xml
java/src/main/java/com/powsybl/iidmbridge/: JavaLauncher.java  PropertyCodes.java  PropertyDispatcher.java
java/src/main/java/com/powsybl/iidmbridge/graalvm/: IidmEntryPoints.java  NetworkRegistry.java
java/src/main/java/com/powsybl/iidmbridge/jni/: IidmBridgeRegistry.java
src/: ActivePowerControl.cpp  BackendSelector.cpp  BackendSelector.h  Battery.cpp  Bus.cpp  BusbarSection.cpp  CoordinatedReactiveControl.cpp  CurrentLimits.cpp  DanglingLine.cpp  Extension.cpp  Generator.cpp  HvdcAngleDroopActivePowerControl.cpp  HvdcLine.cpp  HvdcOperatorActivePowerRange.cpp  InternalConnection.cpp  LccConverterStation.cpp  Line.cpp  Load.cpp  MinMaxReactiveLimits.cpp  Network.cpp  NetworkFactory.cpp  PhaseTapChanger.cpp  PhaseTapChangerStep.cpp  RatioTapChanger.cpp  RatioTapChangerStep.cpp  ReactiveCapabilityCurve.cpp  ShuntCompensator.cpp  ShuntCompensatorNonLinearModel.cpp  SlackTerminal.cpp  StaticVarCompensator.cpp  Substation.cpp  Switch.cpp  Terminal.cpp  ThreeWindingsTransformer.cpp  TwoWindingsTransformer.cpp  VoltageLevel.cpp  VoltagePerReactivePowerControl.cpp  VscConverterStation.cpp
src/graalvm/: GraalVMBackend.cpp  GraalVMBackend.h
src/jni/: JNIBackend.cpp  JNIBackend.h  JNIExceptionBridge.h  JNIMethodCache.h
test/: CMakeLists.txt  MockBackend.h  TestActivePowerControl.cpp  TestBackendSelector.cpp  TestBattery.cpp  TestBus.cpp  TestBusbarSection.cpp  TestConnect.cpp  TestCoordinatedReactiveControl.cpp  TestGenerator.cpp  TestHvdcAngleDroopActivePowerControl.cpp  TestHvdcLine.cpp  TestHvdcOperatorActivePowerRange.cpp  TestIntegration.cpp  TestLine.cpp  TestLoad.cpp  TestNetwork.cpp  TestReactiveLimits.cpp  TestShuntCompensatorNonLinear.cpp  TestSlackTerminal.cpp  TestSwitch.cpp  TestTapChangerObjects.cpp  TestTerminal.cpp  TestThreeWindingsTransformerLeg.cpp  TestTopologyViews.cpp  TestTwoWindingsTransformerTapChanger.cpp  TestVoltagePerReactivePowerControl.cpp
